--- a/visualizations/subcontracts.html
+++ b/visualizations/subcontracts.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Subcontracts Funding Visualization</title>
+    <title>Subcontracts Visualization</title>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/series-label.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
+    <script src="./visualization-scripts/subcontracts-viz.js"></script>
   </head>
-  <body></body>
+  <body>
+    <figure class="highcharts-figure">
+      <div id="subcontracts-container"></div>
+    </figure>
+  </body>
 </html>
