--- a/visualizations/top-networks.html
+++ b/visualizations/top-networks.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sunburst Diagram</title>
+    <title>Network Diagram</title>
     <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/series-label.js"></script>
-    <script src="https://code.highcharts.com/modules/sunburst.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/networkgraph.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
-    <script src="./visualization-scripts/sunburst-viz.js"></script>
+    <script src="./visualization-scripts/top-networks-viz.js"></script>
   </head>
   <body>
     <figure class="highcharts-figure">
-      <div id="sunburst-container"></div>
+      <div id="top-networks-container"></div>
     </figure>
   </body>
 </html>
