Complete most of the visualizations

--- a/visualizations/word-count.html
+++ b/visualizations/word-count.html
@@ -10,11 +10,12 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
-    <script src="./visualization-scripts/word-count-viz.js"></script>
+    <script src="./personal-theme.js"></script>
   </head>
   <body>
     <figure class="highcharts-figure">
       <div id="word-count-container"></div>
     </figure>
+    <script src="./visualization-scripts/word-count-viz.js"></script>
   </body>
 </html>
