--- a/visualizations/descriptions.html
+++ b/visualizations/descriptions.html
@@ -11,11 +11,12 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
-    <script src="./visualization-scripts/descriptions-viz.js"></script>
+    <script src="./personal-theme.js"></script>
   </head>
   <body>
     <figure class="highcharts-figure">
       <div id="descriptions-wordcloud-container"></div>
     </figure>
+    <script src="./visualization-scripts/descriptions-viz.js"></script>
   </body>
 </html>
