--- a/visualizations/subcontracts.html
+++ b/visualizations/subcontracts.html
@@ -6,16 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subcontracts Visualization</title>
     <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/series-label.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
-    <script src="./visualization-scripts/subcontracts-viz.js"></script>
+    <script src="./personal-theme.js"></script>
   </head>
   <body>
     <figure class="highcharts-figure">
-      <div id="subcontracts-container"></div>
+      <div
+        style="display: inline-block; width: 60%; height: 500px"
+        id="subcontracts-container"
+      ></div>
+      <div
+        style="display: inline-block; width: 39%; height: 500px"
+        id="subcontracts-bubble-container"
+      ></div>
     </figure>
+    <script src="./visualization-scripts/subcontracts-viz.js"></script>
   </body>
 </html>
