--- a/visualizations/sunburst.html
+++ b/visualizations/sunburst.html
@@ -12,11 +12,12 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
-    <script src="./visualization-scripts/sunburst-viz.js"></script>
+    <script src="./personal-theme.js"></script>
   </head>
   <body>
     <figure class="highcharts-figure">
       <div id="sunburst-container"></div>
     </figure>
+    <script src="./visualization-scripts/sunburst-viz.js"></script>
   </body>
 </html>
