--- a/visualizations/top-networks.html
+++ b/visualizations/top-networks.html
@@ -9,11 +9,12 @@
     <script src="https://code.highcharts.com/modules/networkgraph.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
-    <script src="./visualization-scripts/top-networks-viz.js"></script>
+    <script src="./personal-theme.js"></script>
   </head>
   <body>
     <figure class="highcharts-figure">
       <div id="top-networks-container"></div>
     </figure>
+    <script src="./visualization-scripts/top-networks-viz.js"></script>
   </body>
 </html>
