Initial work on timeline viz

--- a/visualizations/timeline.html
+++ b/visualizations/timeline.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Timeline</title>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/timeline.js"></script>
-    <title>Timeline Visualization</title>
+    <script src="./personal-theme.js"></script>
   </head>
-  <body></body>
+  <body>
+    <figure class="highcharts-figure">
+      <div id="timeline-container"></div>
+    </figure>
+    <script src="./visualization-scripts/timeline-viz.js"></script>
+  </body>
 </html>
