First pass at index.html file

--- a/visualizations/filtered-sunburst.html
+++ b/visualizations/filtered-sunburst.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Word Count</title>
+    <title>Sunburst Diagram</title>
     <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/series-label.js"></script>
+    <script src="https://code.highcharts.com/modules/sunburst.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
     <script src="./personal-theme.js"></script>
   </head>
   <body>
     <figure class="highcharts-figure">
-      <div id="word-count-container"></div>
+      <div id="filtered-sunburst-container"></div>
     </figure>
-    <script src="./visualization-scripts/word-count-viz.js"></script>
+    <script src="./visualization-scripts/filtered-sunburst-viz.js"></script>
   </body>
 </html>
