Update minor margin issues

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             </ul>
           </div>
           <div class="tab-content d-flex justify-content-center w-100">
-            <div class="tab-pane active" id="tab1">
+            <div class="tab-pane my-1 active" id="tab1">
               <figure class="highcharts-figure">
                 <div id="sunburst-container"></div>
               </figure>
@@ -399,7 +399,7 @@
                 <span style="color: black"> Figure 3: Sunburst chart </span>
               </figcaption>
             </div>
-            <div class="tab-pane" id="tab2">
+            <div class="tab-pane my-1" id="tab2">
               <figure class="highcharts-figure">
                 <div id="filtered-sunburst-container"></div>
               </figure>
@@ -476,7 +476,7 @@
             </ul>
           </div>
           <div class="tab-content d-flex justify-content-center w-100">
-            <div class="tab-pane active" id="tab3">
+            <div class="tab-pane my-1 active" id="tab3">
               <figure class="highcharts-figure">
                 <div id="top-networks-container"></div>
               </figure>
@@ -488,7 +488,7 @@
                 </span>
               </figcaption>
             </div>
-            <div class="tab-pane" id="tab4">
+            <div class="tab-pane my-1" id="tab4">
               <figure class="highcharts-figure">
                 <div id="top-filtered-networks-container"></div>
               </figure>
