Continuing data exploration and analysis

--- a/index.html
+++ b/index.html
@@ -877,6 +877,36 @@
       </div>
     </section>
 
+    <section class="my-4 mx-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-11 mx-auto">
+            <figure class="highcharts-figure">
+              <div id="important-description-networks-container"></div>
+            </figure>
+            <figcaption>
+              <span style="color: black">
+                Figure 11: This visualization shows the network of contracts and
+                subcontracts filtered by subcontracts that build a unique
+                product based on the subcontract description.
+              </span>
+            </figcaption>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="my-3 mx-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-11 mx-auto my-1">
+            Discuss final findings from this network. These are the companies
+            that should be prioritized...
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="my-3 mx-4">
       <div class="container">
         <div class="row">
@@ -943,6 +973,7 @@
     <script src="./visualizations/visualization-scripts/word-count-viz.js"></script>
     <script src="./visualizations/visualization-scripts/top-filtered-description-1-networks-viz.js"></script>
     <script src="./visualizations/visualization-scripts/top-filtered-description-networks-viz.js"></script>
+    <script src="./visualizations/visualization-scripts/important-subcontract-description-networks-viz.js"></script>
 
     <script type="text/javascript">
       if (document.getElementById("state1")) {
